--- a/src/main/resources/templates/editProductPage.html
+++ b/src/main/resources/templates/editProductPage.html
@@ -5,13 +5,24 @@
     <title>Edit</title>
 </head>
 <body>
-    <form method="post" th:action="@{/products/{id}(id=${product.id})}" th:object="${product}">
-        <input th:field="*{title}" placeholder="title">
-        <input th:field="*{pictureUrl}" placeholder="pictureUrl">
-        <input th:field="*{price}" placeholder="price" type="number" step="0.01">
-        <input th:field="*{productType}" placeholder="productType">
-        <input th:field="*{categoryId}" placeholder="categoryId">
-        <button>Zapisz</button>
-    </form>
+<form method="post" th:action="@{/products/{id}(id=${product.id})}" th:object="${product}">
+    <input th:field="*{title}" placeholder="title">
+    <input th:field="*{pictureUrl}" placeholder="pictureUrl">
+    <input th:field="*{price}" placeholder="price" type="number" step="0.01">
+    <select th:field="*{productType}">
+        <option value="">Wybierz</option>
+        <option th:each="type : ${productTypeList}"
+                th:value="${type}"
+                th:text="${type.getPlName()}"
+                th:selected="${type eq product.productType}"></option>
+    </select>
+    <select th:field="*{categoryId}">
+        <option value="">Wybierz</option>
+        <option th:each="category : ${categoryWithIdDtoList}"
+                th:value="${category.id}"
+                th:text="${category.getIdWithName()}"></option>
+    </select>
+    <button>Zapisz</button>
+</form>
 </body>
 </html>
