--- a/src/main/resources/templates/registerPage.html
+++ b/src/main/resources/templates/registerPage.html
@@ -3,38 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <title>Registration</title>
+    <div th:replace="/fragments/header :: header-css"></div>
+
 </head>
 <body>
-    <form method="post" th:action="@{/register}" th:object="${registrationUserDto}">
-        <input th:field="*{firstName}" placeholder="firstName"><br/>
+<div th:replace="/fragments/header :: headerFragment"></div>
+
+    <form class="form-signin" method="post" th:action="@{/register}" th:object="${registrationUserDto}">
+        <label for="firstName">First name</label>
+        <input class="form-control" th:field="*{firstName}" placeholder="firstName"><br/>
         <p th:text="${firstNameError}" th:if="${firstNameError}"></p>
 
-        <input th:field="*{lastName}" placeholder="lastName"><br/>
+        <input class="form-control"th:field="*{lastName}" placeholder="lastName"><br/>
 
-        <input th:field="*{eMail}" placeholder="eMail"><br/>
+        <input class="form-control"th:field="*{eMail}" placeholder="eMail"><br/>
 
-        <input th:field="*{password}" placeholder="password"><br/>
+        <input class="form-control"th:field="*{password}" placeholder="password"><br/>
 
-        <input th:field="*{city}" placeholder="city"><br/>
+        <input class="form-control"th:field="*{city}" placeholder="city"><br/>
 
-        <select th:field="*{country}">
+        <select class="form-control" th:field="*{country}">
             <option th:value="''">Wybierz</option>
             <option th:each="country : ${countryList}"
                     th:value="${country.symbol}"
                     th:text="${country.plName}"></option>
         </select><br/>
 
-        <input th:field="*{zipCode}" placeholder="zipCode"><br/>
+        <input class="form-control" th:field="*{zipCode}" placeholder="zipCode"><br/>
 
-        <input th:field="*{street}" placeholder="street"><br/>
+        <input class="form-control"th:field="*{street}" placeholder="street"><br/>
 
-        <input th:field="*{birthDate}" placeholder="birthDate"><br/>
+        <input class="form-control"th:field="*{birthDate}" placeholder="birthDate"><br/>
 
-        <input th:field="*{pesel}" placeholder="pesel"><br/>
+        <input class="form-control"th:field="*{pesel}" placeholder="pesel"><br/>
 
-        <input th:field="*{phone}" placeholder="phone"><br/>
+        <input class="form-control"th:field="*{phone}" placeholder="phone"><br/>
 
-        <input th:field="*{preferEmails}" placeholder="preferEmails"><br/>
+        <input class="form-control"th:field="*{preferEmails}" placeholder="preferEmails"><br/>
 
         <button>Utwórz konto</button>
     </form>
