--- a/src/main/resources/templates/editProductPage.html
+++ b/src/main/resources/templates/editProductPage.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Edit</title>
+    <div th:replace="/fragments/header :: header-css"></div>
+
 </head>
 <body>
+<div th:replace="/fragments/header :: headerFragment"></div>
+
 <form method="post" th:action="@{/products/{id}(id=${product.id})}" th:object="${product}">
     <input th:field="*{title}" placeholder="title">
     <input th:field="*{pictureUrl}" placeholder="pictureUrl">
